tests/negative/neg_rule2_dynamic.safe
-- Test: neg_rule2_dynamic
-- Description: Dynamic index from function return not provably in bounds.
--   The function returns an arbitrary value that the compiler cannot
--   statically prove is within the array's index range.
-- Clause: SAFE@468cf72:spec/02-restrictions.md#2.8.2.p131:30aba5f5
-- Clause: SAFE@468cf72:spec/02-restrictions.md#2.8.2.p132:8613ecf4
-- Expected: REJECT index_out_of_bounds

package Dynamic_Index_Test

   type Idx is range 1 to 50;
   type Table is array (Idx) of Integer;

   --  Compute_Index: returns some value; the compiler cannot determine range.
   function Compute_Index (Seed : Integer) returns Integer

      return Seed * 7 + 3;


   --  Lookup_Dynamic: uses the result of Compute_Index as array index.
   --  The result of Compute_Index is not provably in 1..50.
   function Lookup_Dynamic (T : Table; Seed : Integer) returns Integer

      return T (Idx (Compute_Index (Seed)));  -- ERROR: not provably in 1..50



